--- a/delice.html
+++ b/delice.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -171,13 +171,14 @@
     <div class="bouton">
         <input type="button" value="Commander">
     </div>
-
     <footer>
         <h3>ohmyfood</h3>
-        <a href="#"><i class="fa-solid fa-utensils"></i><strong>Proposer un restaurant</strong></a>
-        <a href="#"><i class="fa-solid fa-handshake-angle"></i><strong>Devenir partenaire</strong></a>
-        <a href="#"><strong>Mentions légales</strong></a>
-        <a href="#"><strong>Contact</strong></a>
+        <div class="liens_footer">
+            <a href="#"><i class="fa-solid fa-utensils"></i><strong>Proposer un restaurant</strong></a>
+            <a href="#"><i class="fa-solid fa-handshake-angle"></i><strong>Devenir partenaire</strong></a>
+            <a href="#"><strong>Mentions légales</strong></a>
+            <a href="mailto:ohmyfood@gmail.com"><strong>Contact</strong></a>
+        </div>
     </footer>
 
 </body>
