--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -124,10 +124,12 @@
 
     <footer>
         <h3>ohmyfood</h3>
-        <a href="#"><i class="fa-solid fa-utensils"></i><strong>Proposer un restaurant</strong></a>
-        <a href="#"><i class="fa-solid fa-handshake-angle"></i><strong>Devenir partenaire</strong></a>
-        <a href="#"><strong>Mentions légales</strong></a>
-        <a href="#"><strong>Contact</strong></a>
+        <div class="liens_footer">
+            <a href="#"><i class="fa-solid fa-utensils"></i><strong>Proposer un restaurant</strong></a>
+            <a href="#"><i class="fa-solid fa-handshake-angle"></i><strong>Devenir partenaire</strong></a>
+            <a href="#"><strong>Mentions légales</strong></a>
+            <a href="mailto:ohmyfood@gmail.com"><strong>Contact</strong></a>
+        </div>
     </footer>
     
 </body>
